# StudyMate-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.streamlit/: config.toml
manifests/: deployment.yaml  service.yaml
src/application/: __init__.py  answer_evaluation_service.py  dependencies.py  hint_service.py  progress_service.py  question_service.py  review_service.py  study_session_service.py
src/common/: exceptions.py  logger.py
src/config/: settings.py
src/evaluation/: __init__.py  deterministic.py  duplicate_detection.py  judge.py  judge_prompts.py  models.py  normalization.py  policy.py  service.py
src/generator/: __init__.py  regeneration.py  repair_prompts.py
src/llm/: __init__.py  gateway.py  gemini_client.py  groq_client.py  groq_question_generator.py  groq_question_judge.py  json_utils.py  message_adapter.py  models.py
src/models/: question_constraints.py  question_mapper.py  question_payloads.py  question_schemas.py  study_session.py
src/ui/: __init__.py  (+7 more)
tests/: test_application_question_service.py  test_evaluation.py  test_gemini_client.py  test_generation_architecture_audit.py  test_groq_adapters.py  test_learning_experience.py  test_llm_infrastructure.py  test_local_question_pipeline.py  test_question_mapper.py  test_question_payloads.py  test_question_prompts.py  test_question_schema.py  test_regeneration.py  test_streamlit_app.py  test_ui_architecture_cleanup.py  test_ui_export_helpers.py  test_ui_helpers.py  test_ui_semantic_flows.py
(+16 files in other folders)
