[project]
name = "studymate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=0.37.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]
